# spheremapping

./: CMakeLists.txt  main.cpp
CMakeModules/: FindOmegalib.cmake
lib/util/: CLGL.cpp  CLGL.hpp  config.h.in  gl_utils.cpp  gl_utils.h
resources/: square.vert
spheremapping/: fragmentShader.frag  main.cpp  math_funcs.cpp  square.frag  stb_image.h
spheremapping.xcodeproj/: project.pbxproj
spheremapping.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
spheremapping.xcodeproj/xcuserdata/saeedboorboor.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
spheremapping.xcodeproj/xcuserdata/saeedboorboor.xcuserdatad/xcschemes/: spheremapping.xcscheme  xcschememanagement.plist
